--- a/get-started/introduction.mdx
+++ b/get-started/introduction.mdx
@@ -26,6 +26,9 @@ Learn how to get started with Moderation API in 5 minutes.
   <Card title="Java quickstart" icon="java" href="/quickstart/java">
     Get started with Java
   </Card>
+  <Card title=".NET quickstart" href="/quickstart/dotnet">
+    Get started with .NET
+  </Card>
 </CardGroup>
 
 ## Not a developer?
