--- a/quickstart/dotnet.mdx
+++ b/quickstart/dotnet.mdx
@@ -1,7 +1,8 @@
 ---
-title: "Quickstart .NET"
+title: "Content moderation with .NET"
 sidebarTitle: ".NET"
 description: "Learn how to moderate content using Moderation API's REST endpoints with .NET"
+icon: microsoft
 ---
 
 ---
