--- a/quickstart/go.mdx
+++ b/quickstart/go.mdx
@@ -1,7 +1,8 @@
 ---
-title: "Quickstart Go"
+title: "Content moderation with Go"
 sidebarTitle: "Go"
 description: "Learn how to moderate content using Moderation API's REST endpoints with Go"
+icon: golang
 ---
 
 ---
