--- a/quickstart/java.mdx
+++ b/quickstart/java.mdx
@@ -1,7 +1,8 @@
 ---
-title: "Quickstart Java"
+title: "Content moderation with Java"
 sidebarTitle: "Java"
 description: "Learn how to moderate content using Moderation API's REST endpoints with Java"
+icon: java
 ---
 
 ---
