--- a/quickstart/nodejs.mdx
+++ b/quickstart/nodejs.mdx
@@ -1,7 +1,8 @@
 ---
-title: "Quickstart Node.js"
+title: "Content moderation with Node.js"
 sidebarTitle: "Node.js"
 description: "Learn how to moderate content using Moderation API's Node.js SDK"
+icon: node-js
 ---
 
 ---
