--- a/quickstart/php.mdx
+++ b/quickstart/php.mdx
@@ -1,7 +1,8 @@
 ---
-title: "Quickstart PHP"
+title: "Content moderation with PHP"
 sidebarTitle: "PHP"
 description: "Learn how to moderate content using Moderation API's REST endpoints with PHP"
+icon: php
 ---
 
 ---
