--- a/quickstart/ruby.mdx
+++ b/quickstart/ruby.mdx
@@ -1,7 +1,8 @@
 ---
-title: "Quickstart Ruby"
+title: "Content moderation with Ruby"
 sidebarTitle: "Ruby"
 description: "Learn how to moderate content using Moderation API's Ruby SDK"
+icon: gem
 ---
 
 ---
