--- a/quickstart/python.mdx
+++ b/quickstart/python.mdx
@@ -1,7 +1,8 @@
 ---
-title: "Quickstart Python"
+title: "Content moderation with Python"
 sidebarTitle: "Python"
 description: "Learn how to moderate content using Moderation API's REST endpoints with Python"
+icon: python
 ---
 
 ---
