--- a/resources/sdks.mdx
+++ b/resources/sdks.mdx
@@ -1,6 +1,7 @@
 ---
 title: "SDKs"
 description: "Moderation API's server-side helper libraries (also known as server-side SDKs) reduce the amount of work required to use the REST APIs, starting with reducing the boilerplate code you have to write."
+icon: code
 ---
 
 <Snippet file="sdks.mdx" />
