--- a/get-started/introduction.mdx
+++ b/get-started/introduction.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Get started"
 description: "Moderation API is a full stack content moderation solution."
+icon: book-open
 ---
 
 ## Quickstart
