--- a/wordlists/overview.mdx
+++ b/wordlists/overview.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Wordlists"
 description: "Smart wordlists that understand semantic meaning, similar words, and obfuscations"
+icon: list
 ---
 
 ## When to use a wordlist
