--- a/changelog.mdx
+++ b/changelog.mdx
@@ -19,6 +19,11 @@ rss: true
   content view for safer moderation
 - **Global Queue Option:** New global queue setting available. This will remove content from queues if it has been
   reviewed in any queue.
+- **Use variables in masking:** You can now use \$ variables in masking. For example, if you want to wrap matched words in `<b>` tags, you can use `<b>$</b>` as the masking value.
+
+### Bug fixes and improvements
+
+- Improved dashboard performance and stability
 
 </Update>
 
