--- a/guides/creating-a-custom-model.mdx
+++ b/guides/creating-a-custom-model.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Creating a custom model"
-sidebarTitle: "Creating a model"
+sidebarTitle: "Creating a custom model"
 description: "Learn how to create a custom model using Moderation API"
 ---
 
