--- a/users/overview.mdx
+++ b/users/overview.mdx
@@ -40,7 +40,7 @@ User management lets you:
 ## Get started
 
 Just add an `authorId` when submitting content to a [moderation
-endpoint](/api-reference).
+endpoint](/api-reference/moderate/analyze-text).
 
 We recommend using the user ID from your system
 but any unique identifier like email or username will work.
