--- a/users/updating-authors.mdx
+++ b/users/updating-authors.mdx
@@ -6,6 +6,12 @@ description: "Update authors with data to improve trust scoring and dashboard de
 
 You can update author information to improve trust scoring and fraud detection in your moderation system. Author updates can be made through either the API or the dashboard interface.
 
+## Author Creation
+
+Authors are automatically created when an `author_id` is included in [submit content requests](/api-reference/content/submit-content). However, you can also manually create authors using the API before submitting content.
+
+We recommend adding detailed author information using the update endpoint after automatic creation, or creating authors ahead of time with complete details to improve initial trust scoring accuracy.
+
 ## Prerequisites
 
 - **Dashboard**: You need the moderator role for your project
