--- a/users/updating-authors.mdx
+++ b/users/updating-authors.mdx
@@ -78,7 +78,7 @@ The `manual_trust_level` field allows you to override automatic trust level calc
 - **Reset**: Set to `null` to return to automatic trust level calculation
 - **Impact**: Affects moderation decisions and user permissions
 
-Learn more about trust levels and how they work in our [Trust Levels Guide](#) (coming soon).
+Learn more about trust levels and how they work in our [Trust Levels Article](/users/trust-levels).
 
 ### Timestamps
 
