--- a/users/fraud-detection.mdx
+++ b/users/fraud-detection.mdx
@@ -30,8 +30,8 @@ This enables you to:
 
 Fraud detection analyzes three main categories of signals:
 
-### Behavioral Patterns
-
+<AccordionGroup>
+<Accordion title="Behavioral Patterns" icon="wave-pulse">
 Unusual user behavior that indicates automation or coordination:
 
 **Content Similarity**
@@ -52,8 +52,9 @@ Unusual user behavior that indicates automation or coordination:
 - Activity patterns that don't match typical human behavior
 - Coordinated timing across multiple accounts
 
-### Network & Privacy Indicators
+</Accordion>
 
+<Accordion title="Network & Privacy Indicators" icon="globe">
 Technical signals that reveal attempts to hide identity or location:
 
 **VPN and Proxy Usage**
@@ -79,8 +80,9 @@ Technical signals that reveal attempts to hide identity or location:
 - Shared device fingerprints across many accounts
 - Inconsistent timezone and language settings
 
-### Account Security Signals
+</Accordion>
 
+<Accordion title="Account Security Signals" icon="shield">
 Indicators related to account authenticity and verification:
 
 **Email Analysis**
@@ -100,6 +102,9 @@ Indicators related to account authenticity and verification:
 - Mismatches between claimed location and technical indicators
 - Inconsistent personal information across platforms
 - Generated or stolen profile information
+
+</Accordion>
+</AccordionGroup>
 
 ## How fraud detection works
 
